--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -368,6 +368,7 @@
                             android:textStyle="bold" />
 
                         <LinearLayout
+                            android:id="@+id/today_layout"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_toRightOf="@+id/tv_month_day"
@@ -394,6 +395,27 @@
                                 android:gravity="center"
                                 android:textColor="#000000"
                                 android:textSize="10sp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_toRightOf="@+id/today_layout"
+                            android:orientation="vertical"
+                            android:paddingLeft="6dp"
+                            android:paddingTop="12dp"
+                            android:paddingRight="6dp"
+                            android:paddingBottom="12dp">
+
+                            <TextView
+                                android:id="@+id/tv_current_year_month"
+                                android:layout_width="wrap_content"
+                                android:layout_height="0dp"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:textColor="#000000"
+                                android:textSize="16sp" />
+
                         </LinearLayout>
 
                         <ImageView
@@ -460,7 +482,7 @@
                             app:current_month_lunar_text_color="#CFCFCF"
                             app:current_month_text_color="#333333"
                             app:day_text_size="14sp"
-                            app:max_year="2020"
+                            app:max_year="2025"
                             app:min_year="2004"
                             app:month_view="cn.martinkay.autocheckinplugin.calendarview.ProgressMonthView"
                             app:month_view_show_mode="mode_fix"
@@ -475,6 +497,7 @@
                             app:selected_theme_color="#FFf54a00"
                             app:week_background="#fff"
                             app:week_text_color="#111111"
+                            app:month_view_scrollable="true"
                             app:year_view_day_text_color="#333333"
                             app:year_view_day_text_size="9sp"
                             app:year_view_month_text_color="#ff0000"
