--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -132,6 +132,12 @@
                         android:layout_height="wrap_content"
                         android:onClick="onClick"
                         android:text="关闭指定包名APP" />
+                    <Button
+                        android:id="@+id/test_home_app_btn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:onClick="onClick"
+                        android:text="回到桌面" />
 
 
                 </LinearLayout>
